--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
         "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\""
     },
     "dependencies": {
+        "@heroicons/react": "^1.0.5",
         "@reduxjs/toolkit": "^1.6.1",
+        "@szhsin/react-menu": "^2.3.0",
+        "ace-builds": "^1.4.13",
+        "axios": "^0.24.0",
         "react": "^17.0.0",
+        "react-ace": "^9.5.0",
         "react-dom": "^17.0.0",
-        "react-redux": "^7.2.6"
+        "react-markdown": "^7.1.1",
+        "react-redux": "^7.2.6",
+        "react-router-dom": "^6.2.1",
+        "react-syntax-highlighter": "^15.4.5"
     },
     "devDependencies": {
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
+        "@types/react-syntax-highlighter": "^13.5.2",
         "@typescript-eslint/eslint-plugin": "^5.7.0",
         "@typescript-eslint/parser": "^5.4.0",
         "@vitejs/plugin-react-refresh": "^1.3.1",
